madz: added price column

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                                     <th align="left">DURATION</th>
                                     <th align="left">AIRCRAFT</th>
                                     <th align="left">CLASS</th>
+                                    <th align="left">PRICE</th>
                                 </tr>
                             </thead>
                             <tbody>
